Enhance UI and repair videoplay

--- a/locales/sk.json
+++ b/locales/sk.json
@@ -13,5 +13,6 @@
 	"Next Slide": "Ďalší snímok",
 	"Load Presentation": "Načítaj prezentáciu",
 	"The presentation you load will be displayed here.": "Na tomto mieste sa zobrazí prezentácia, ktorú otvoríš.",
-	"Slide %s of %s": "Stránka %s z %s"
+	"Slide %s of %s": "Stránka %s z %s",
+	"Refresh presentation": "Refresh presentation"
 }
