--- a/locales/sk.json
+++ b/locales/sk.json
@@ -14,5 +14,8 @@
 	"Load Presentation": "Načítaj prezentáciu",
 	"The presentation you load will be displayed here.": "Na tomto mieste sa zobrazí prezentácia, ktorú otvoríš.",
 	"Slide %s of %s": "Stránka %s z %s",
-	"Refresh presentation": "Refresh presentation"
+	"Refresh presentation": "Refresh presentation",
+	"Exit": "Exit",
+	"Documentation": "Documentation",
+	"Reload Application": "Reload Application"
 }
